# Rudoff_Jackson

./: .gitignore  Jackson Rudoff - Final Project Proposal.docx  README.md  Week 3 - Data Wrangling with Pandas.ipynb  country.csv
Lecture Notes/: Lecture 2 In Class Notes.ipynb  Lecture_4_in_class_notes.ipynb  astronauts.csv  follow_along.ipynb  lec_10.ipynb  lec_6.ipynb  lecture_9.ipynb  testfile.txt
final_project/: Jackson Rudoff - Final Project Proposal.docx  Project_Proposal_jer.ipynb
final_project/anespy/docs/: vignettes.ipynb
final_project/anespy/docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
final_project/anespy/docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
hw01/: HW01.ipynb  pyproject.toml  script.py
hw01/.ipynb_checkpoints/: HW01-checkpoint.ipynb
hw02/: HW2 - Jackson_Rudoff.ipynb
hw03/: HW3.ipynb
hw04/: hw4.ipynb
hw05/: HW5.ipynb  hw05.md
hw06/: HW6.ipynb  test_cipher.py
hw06/data/: words.csv
hw06/tests/: parametrize.py  parametrize_bad.py  test_cipher.py
hw07/: HW7.ipynb
hw09/: hw9.ipynb
lecture_package/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
lecture_package/docs/: Makefile  conf.py  example.ipynb  make.bat
lecture_package/src/lecture_package/: __init__.py
lecture_package/tests/: test_lecture_package.py
lecture_test/: pyproject.toml
(+23 files in other folders)
