[tool.poetry]
name = "hw01"
version = "0.1.0"
description = ""
authors = ["jer164 <62763243+jer164@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.1"
pandas = "^1.4.4"
matplotlib = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
