[tool.poetry]
name = "lecture_package"
version = "0.1.0"
description = "Exemplar for package"
authors = ["jackson rudoff"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
