[tool.poetry]
name = "lecture-test"
version = "0.1.0"
description = ""
authors = ["jer164 <62763243+jer164@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "lecture_test"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
